--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -21,6 +21,16 @@
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.ehcache/jcache -->
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.javatuples</groupId>
+			<artifactId>javatuples</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.ehcache</groupId>
 			<artifactId>jcache</artifactId>
 			<version>1.0.0</version>
